--- a/templates/about.html
+++ b/templates/about.html
@@ -17,6 +17,9 @@
         <img src="{{ user['user_avatar_url'] }}" alt="Avatar" />
 
         <h2>{{ user["user_fname"] + " " + user["user_lname"] }}</h2>
+        <a href="{{ url_for('edit_profile') }}" class="edit-profile-button"
+          >編輯個人資料</a
+        >
         <p>
           {% if user["user_role"] == "Tenant" %} 租客 {% elif user["user_role"]
           == "Landlord" %} 房東 {% endif %}
@@ -31,10 +34,8 @@
           <h3>關於我</h3>
 
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo veniam
-            praesentium recusandae, autem aperiam impedit est? Quis sequi
-            excepturi enim laborum aperiam soluta consectetur dolore iusto quam,
-            inventore officiis quaerat!
+            {{ user["user_desc"] | default('這位使用者很懶，沒有留下任何介紹。',
+            true) }}
           </p>
 
           <div class="info">
