refactor(flask): refactor app.py

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
         <img src="{{ user['user_avatar_url'] }}" alt="Avatar" />
 
         <h2>{{ user["user_fname"] + " " + user["user_lname"] }}</h2>
-        <a href="{{ url_for('edit_profile') }}" class="edit-profile-button"
+        <a href="{{ url_for('edit_about_page') }}" class="edit-profile-button"
           >編輯個人資料</a
         >
         <p>
