--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,9 @@
         <img src="{{ user['user_avatar_url'] }}" alt="Avatar" />
 
         <h2>{{ user["user_fname"] + " " + user["user_lname"] }}</h2>
-        <a href="{{ url_for('edit_about_page') }}" class="edit-profile-button"
+        <a
+          href="{{ url_for('edit_about_page', user_id=user.user_id) }}"
+          class="edit-profile-button"
           >編輯個人資料</a
         >
         <p>
@@ -27,6 +29,18 @@
         <p class="email">{{ user["user_email"] }}</p>
 
         <button>聯絡我</button>
+
+        <div id="star-rating">
+          <h4>評價</h4>
+          <span class="star" data-value="1">★</span>
+          <span class="star" data-value="2">★</span>
+          <span class="star" data-value="3">★</span>
+          <span class="star" data-value="4">★</span>
+          <span class="star" data-value="5">★</span>
+        </div>
+        <input type="hidden" id="rating-value" name="rating" value="0" />
+
+        <p>{{ user.rating }}</p>
       </aside>
 
       <main class="main">
@@ -55,7 +69,7 @@
             {% for house in houses %}
             <a class="property" href="/house/{{ house['house_id'] }}">
               <img
-                src="{{ house['media_url'] }}"
+                src="{{ house['media_url'][0] }}"
                 alt="{{ house['house_title'] }}"
               />
 
@@ -72,5 +86,44 @@
         </section>
       </main>
     </div>
+
+    <script>
+      const stars = document.querySelectorAll("#star-rating .star");
+      const ratingInput = document.getElementById("rating-value");
+
+      document.addEventListener("DOMContentLoaded", async () => {
+        const response = await fetch("/api/rating/{{ user.user_id }}", {
+          method: "GET",
+        });
+
+        const res = await response.json();
+        const rate = res.rate;
+
+        stars.forEach((s, i) => s.classList.toggle("selected", i < rate));
+      });
+
+      stars.forEach((star) => {
+        star.addEventListener("mouseenter", () => {
+          const rate = parseInt(star.dataset.value);
+          stars.forEach((s, i) => s.classList.toggle("hover", i < rate));
+        });
+
+        star.addEventListener("mouseleave", () => {
+          stars.forEach((s) => s.classList.remove("hover"));
+        });
+
+        star.addEventListener("click", () => {
+          const rate = parseInt(star.dataset.value);
+          ratingInput.value = rate;
+          stars.forEach((s, i) => s.classList.toggle("selected", i < rate));
+
+          fetch("/api/rating/{{ user.user_id}}", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ rate }),
+          }).then(window.location.reload());
+        });
+      });
+    </script>
   </body>
 </html>
